--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 # Configuration Spatiale
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.whitelabel.enabled=false
