--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-server.error.whitelabel.enabled=false
+# server.error.whitelabel.enabled=false
